examples/rewrites-vs2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: ext-service-api
  namespace: public
spec:
  displayName: ext_service-api
  virtualHost:
    name: ""
    domains:
    - service-apiexample.com
    routes:
    - matchers:
      - methods:
        - OPTIONS
        prefix: /
      routeAction:
        single:
          upstream:
            name: public-api-api-80
            namespace: gloo-system
      options:
        extensions:
          configs:
            extauth:
              disable: true
    - matchers:
      - methods: []
        prefix: /signup
      routeAction:
        single:
          upstream:
            name: public-signup-backend-signup-backend-81
            namespace: gloo-system
    - matchers:
      - methods: []
        prefix: /verify-invite
      routeAction:
        single:
          upstream:
            name: public-signup-backend-signup-backend-81
            namespace: gloo-system
      options:
        extensions:
          configs:
            extauth:
              disable: true
        prefixRewrite:
          prefixRewrite: /public/verify-invite
    - matchers:
      - methods: []
        prefix: /geocode-api
      routeAction:
        single:
          upstream:
            name: default-geocode-api-geocode-api-80
            namespace: gloo-system
      options:
        prefixRewrite:
          prefixRewrite: ' '
    options:
      extauth: {}
      cors:
        allowCredentials: true
        allowHeaders:
        - Content-Type,Authorization,X-User-Agent
        allowMethods:
        - GET
        - POST
        - PUT
        allowOrigin:
        - '*'
        exposeHeaders:
        - WWW-Authenticate
        maxAge: 1d
